# Recruiter-Tracking-Platform

./: .dockerignore  .gitignore  CLAUDE.md  FEATURES.md  test_api.py
backend/: README.md  app.py  pyproject.toml  seed_clean.py  seed_flow.py
backend/core/: config.py  database.py  deps.py  security.py
backend/features/account_managers/: routes.py
backend/features/activity/: service.py
backend/features/allocation/: service.py
backend/features/auth/: routes.py  schema.py  service.py
backend/features/calls/: routes.py  schema.py  service.py
backend/features/candidates/: routes.py  schema.py  service.py
backend/features/clients/: routes.py
backend/features/dashboard/: routes.py  schema.py  service.py
backend/features/demand_status/: routes.py
backend/features/export/: routes.py
backend/features/followup/: routes.py
backend/features/form_config/: routes.py
backend/features/jd_extract/: routes.py  schema.py  service.py
backend/features/jobs/: routes.py  schema.py  service.py
backend/features/mails/: routes.py  schema.py  service.py
backend/features/notifications/: routes.py  service.py
backend/features/resume_extract/: routes.py  schema.py  service.py
backend/features/submissions/: routes.py  schema.py  service.py
backend/features/tasks/: scheduler.py
backend/features/upload/: routes.py
backend/features/users/: routes.py  schema.py  service.py
backend/features/validation/: consultant_profile_routes.py  routes.py  schema.py  service.py
backend/infra/: models.py  s3.py
deploy/: Caddyfile  Dockerfile  deploy.sh  docker-compose.yml
(+34 files in other folders)
